--- a/assets/styles/signup.css
+++ b/assets/styles/signup.css
@@ -8,16 +8,18 @@
 /* Utilities */
 
 body {
-    background-color: #474747;
+    background-color: honeydew;
 }
 
 .container {
     padding: 15px;
     height: 100vh;
+  
 }
 
 .row {
     display: flex;
+    
 }
 
 ul {
@@ -30,28 +32,26 @@ li {
 
 a {
     text-decoration: none;
-    color: #FFF;
+    color: #000;
 }
 
-a:hover {
-    color: #000;
-    ;
-}
 
 .col {
     display: flex;
     flex-direction: column;
+    
 }
 
 .rounded {
     border-radius: 4px;
+   
 }
 
 
 /* Nav */
 
 nav {
-    background-color: #a19d9d;
+    background-color: rgb(177, 177, 128);
     padding: 15px;
     justify-content: space-between;
     align-items: center;
@@ -61,7 +61,9 @@ nav {
 /* Protucts */
 
 .products {
-    background-color: #a19d9d;
+    background-image: url(../img/logo.jpg);
+    background-position: center;
+    background-color: rgb(177, 177, 128);
     padding: 30px;
     margin-top: 10px;
     align-items: center;
@@ -81,7 +83,7 @@ nav {
 .loginbox {
     width: 400px;
     height: fit-content;
-    background-color: #474747;
+    background-color: rgb(141, 141, 101);
     color: rgb(10, 10, 10);
     margin: 50px auto;
     padding: 30px;
@@ -95,13 +97,14 @@ nav {
     margin-top: 0px;
 }
 
-h2 {
-    color: #FFF;
+h1 {
+    color: black;
 }
 
 .loginbox input {
     width: 100%;
     margin-bottom: 20px;
+    border-radius: 5px;
 }
 
 
@@ -116,7 +119,7 @@ input[type="password"] {
     padding: 5px;
     font-size: 18px;
     font-family: 'Times New Roman', Times, serif;
-    background: transparent;
+    background: honeydew;
 }
 
 
@@ -138,9 +141,8 @@ input[type="password"] {
 }
 
 footer .row {
-    background-color: #a19d9d;
-    color: #FFF;
-    ;
+    background-color: rgb(177, 177, 128);
+    color: #000;
 }
 
 .contact_details p {
