--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,12 +6,14 @@
 /* Utilities */
 
 body {
-    background-color: #474747;
+    background-color: honeydew;
+
 }
 
 .container {
     padding: 15px;
     height: 100vh;
+    background-color: beige;
 }
 
 .row {
@@ -28,12 +30,11 @@ li {
 
 a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: #000;
 }
 
 a:hover {
     color: #000;
-    ;
 }
 
 .col {
@@ -47,7 +48,7 @@ a:hover {
 /* Nav */
 
 nav {
-    background-color: #a19d9d;
+    background-color: rgb(177, 177, 128);
     padding: 15px;
     justify-content: space-between;
     align-items: center;
@@ -59,8 +60,18 @@ nav {
 }
 /* Protucts */
 
+.product {
+    background-image: url(../img/logo.jpg);
+    background-position: center;
+    padding: 30px;
+    height: 500px;
+    margin-top: 10px;
+    align-items: center;
+    justify-content: center;
+}
+
 .products {
-    background-color: #a19d9d;
+    background-color: rgb(177, 177, 128);
     padding: 30px;
     margin-top: 10px;
     align-items: center;
@@ -69,7 +80,7 @@ nav {
 
 .imgdiv {
     margin-top: 10px;
-    max-width: 500px;
+    max-width: 100%;
     border-radius: 4px;
 }
 
@@ -86,7 +97,7 @@ nav {
     width: fit-content;
     margin-right: 30px;
     border-radius: 10px;
-    background: #474747;
+    background-color: rgb(141, 141, 101);
     transform: scale(1);
     transition: transform 0.5s;
     margin-bottom: 10px;
@@ -133,8 +144,8 @@ nav {
 /* footer start */
 
 footer .row {
-    background-color: #a19d9d;
-    color: #FFF;
+    background-color: rgb(177, 177, 128);
+    color: #000;
 }
 
 .contact {
